<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_running"
            android:icon="@drawable/baseline_directions_run_white_24dp"

            android:title="@string/running" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/baseline_bar_chart_white_24dp"
            android:title="@string/BMI" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_white_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/baseline_bluetooth_searching_white_24dp"
            android:title="@string/bluetooth" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/baseline_brightness_4_white_24dp"
                android:title="@string/nightMode"
                app:actionLayout="@layout/layout_theme_switch"
                />
            <item
                android:id="@+id/nav_lock"
                android:icon="@drawable/baseline_screen_lock_portrait_white_24dp"
                android:title="@string/autoLock"
                app:actionLayout="@layout/layout_lock_switch"
                />
        </menu>
    </item>

</menu>
