<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?attr/colorPrimary"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llRunningBottomLayoutTopPart"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRunningDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textColor="?attr/textcolor"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceTravelled"
                android:textColor="?attr/textcolor"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Chronometer
                android:id="@+id/tvRunningTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration0"
                android:textColor="?attr/textcolor"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeText"
                android:textColor="?attr/textcolor"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#82888e"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/llRunningBottomLayoutBottomPart"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRunningAverageSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/speed"
                    android:textColor="?attr/textcolor"
                    android:textSize="20sp"
                    android:contentDescription="@string/avrSpeed"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speedAverage"
                    android:textColor="?attr/textcolor"
                    android:textSize="12sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRunningAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/speed"
                    android:textColor="?attr/textcolor"
                    android:textSize="20sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitudeUnit"
                    android:textColor="?attr/textcolor"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRunningLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_deepblue"
                android:gravity="center"
                android:text="@string/lock"
                android:textColor="#000"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvRunningPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_orange"
                android:gravity="center"
                android:text="@string/pause"
                android:textColor="#000"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvRunningStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_deepblue"
                android:gravity="center"
                android:text="@string/stopScan"
                android:textColor="#000"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>